# chemink

./: .gitignore  .gitmodules  CMakeLists.txt  ChemInk.sln  ChemInk_MSVC.pro  README.md  build-3rd.bat  compile.bat
ChemInk/: ChemInk - 副本.vcxproj  ChemInk.rc  ChemInk.vcxproj  ChemInk.vcxproj.filters  chemink.qrc  resource.h  weights(1).qrc  weights(2).qrc  weights(3).qrc  weights(4).qrc
ChemInk/android.win.qmake.reference/: ChemInk.pro
ChemInk/data/: DenseNet-78-64x64.json  Yolov3-tiny-2019-10-3.cfg  densenet-chdsbw.json
ChemInk/macOS.qmake.reference/: ChemInk.pro
ChemInk/src/: alkanetopo.cpp  alkanetopo.h  browser.cpp  browser.h  chembalancer.cpp  chembalancer.h  chemink.qrc  classifier.cpp  classifier.h  detectionobject.cpp  detectionobject.h  docwidget.cpp  docwidget.h  fdeepcaller.cpp  fdeepcaller.h  fdeepcnn.cpp  fdeepcnn.h  forcefield.cpp  forcefield.h  forcefieldcaller.cpp  forcefieldcaller.h  glcheminfo.cpp  glcheminfo.h  glmolarea.cpp  glmolarea.h  glumolwindow.cpp  glumolwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  molecule.cpp  molecule.h  muldocwidget.cpp  muldocwidget.h  objdetector.cpp  objdetector.h  opencvyolov3.cpp  opencvyolov3.h  (+22 more)
ChemInk/src.extra/: fdeepyolov3.cpp  fdeepyolov3.h  yolovinocaller.cpp  yolovinocaller.h
DenseNet/: .gitignore  densenet.py  print.py  simple.list  summary.py  test.list  test.py  train.list  train.py
RectBasedDemo/: README.md  RectBasedDemo.vcxproj  RectBasedDemo.vcxproj.filters  TaskDistributionInterface.cpp  TaskDistributionInterface.h  TaskDistributionInterface.ui
RectBasedDemo/ChemicalEquationInterpreter/: Element.cpp  Element.h  Fraction.cpp  Function.cpp  Group.h  config.h  化学方程式测试样例.txt
RectBasedDemo/DrawingBoard/: DrawingBoard.cpp  KeyBoard.cpp  KeyBoard.ui  MyScript.cpp  SetBoard.cpp  SetBoard.ui
RectBasedDemo/MojoCNN/: activation.h  cost.h  dictionary.cpp  mojo.h  network.h  solver.h  util.h
RectBasedDemo/TrainScript/: WordList.txt  mnist_parser.h  test_mnist.h
_chemink/: browser.h  chemink.h  forcefield.h  objdetector.h  rawscript.h  resource.h
_chemink/res/: big_res.qrc
chemink/: CMakeLists.txt  browser.cpp  chembalancer.cpp  chembalancer.h  chemink.cpp  chemink.rc  classifier.cpp  classifier.h  fdeepcaller.cpp  fdeepcaller.h  forcefield.cpp  glumolwindow.cpp  glumolwindow.h  main.cpp  molecule.cpp  molecule.h  objdetector.cpp  rawscript.cpp  scribblearea.cpp  scribblearea.h  spellcorrector.cpp  spellcorrector.h
chemink/balance/: balance_util.cpp  balance_util.hpp  equation.cpp  equation.hpp
chemink/res/: chemink.qrc  dictionary.txt  obabel.qrc
chemink/res/license/frugally-deep/: LICENSE.txt
chemink/res/model/: char76.cfg  char78_64x64.json
chemink/res/obabel/: aromatic.txt  atomization-energies.txt  babel_povray3.inc  bondtyp.txt  eem.txt  eem2015ba.txt  eem2015bm.txt  eem2015bn.txt  eem2015ha.txt  element.txt  gaff.prm  phmodel.txt  space-groups.txt  templates.sdf  torlib.txt  types.txt
include/fdeep/: common.hpp  convolution.hpp  fdeep.hpp  (+9 more)
scut_irac_process/: charinfo.cpp  charinfo.h  generator.cpp  generator.h  main.cpp  my_label.txt  scut_irac_process.vcxproj  scut_irac_process.vcxproj.filters  scut_label.txt  scutirac.cpp  scutirac.h
src/: fraction.hpp  isomer.hpp  std_util.cpp  std_util.hpp
version-2019-3-2.src/: Qt_Chemical_Handwriting_Board.sln
(+155 files in other folders)
